note on zipcodes

--- a/code/backend/backend_notebook.ipynb
+++ b/code/backend/backend_notebook.ipynb
@@ -1975,25 +1975,12 @@
    ]
   },
   {
-   "cell_type": "code",
-   "execution_count": null,
+   "cell_type": "markdown",
    "metadata": {},
-   "outputs": [],
-   "source": []
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": []
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": []
+   "source": [
+    "### TODO: Filter by Zipcode\n",
+    "- Since home health services comes to you, they have their own coverage of which zipcodes they can service"
+   ]
   },
   {
    "cell_type": "code",
