add process pdf

--- a/code/backend/recommendation.ipynb
+++ b/code/backend/recommendation.ipynb
@@ -7,7 +7,8 @@
    "outputs": [],
    "source": [
     "from pipeline import *\n",
-    "from process_pdf import *"
+    "from process_pdf import *\n",
+    "! python process_pdf.py"
    ]
   },
   {
@@ -42,13 +43,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "df = pd.read_csv('data/HH_Provider_Oct2020.csv')\n",
-    "df_cal = df[df['State'] == 'CA']\n",
-    "df_cal.reset_index(drop=True, inplace=True)\n",
-    "df_cal = df_cal.loc[:, ~df_cal.columns.str.startswith('Footnote')]\n",
-    "df_zip = pd.read_csv('data/HH_Zip_Oct2020.csv')\n",
-    "cms_nums = df_zip[df_zip[' ZIP Code'] == zipcode]['CMS Certification Number (CCN)']\n",
-    "df_cal = df_cal[df_cal['CMS Certification Number (CCN)'].isin(list(cms_nums))]"
+    "df_cal = load_df(zipcode)"
    ]
   },
   {
